--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,12 @@
 			<version>3.5.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-all</artifactId>
+			<version>4.1.17.Final</version>
+		</dependency>
+
 
 	</dependencies>
 	<!-- build all dependencies in one jar -->
