登录将用户存数据库

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,11 @@
 	<url>http://maven.apache.org</url>
 
 	<dependencies>
+		<dependency>
+			<groupId>com.helen</groupId>
+			<artifactId>wechat</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
 		<dependency>
